kubernetes/apps/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  parentRefs:
    - name: internal
      namespace: cilium-gateway
  hostnames:
    - vault.home.demivan.me
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
